--- a/templates/footer.html
+++ b/templates/footer.html
@@ -24,7 +24,7 @@
               <ul class="list-unstyled mb-0">
                 <li><a class="footer-link" href="#">Twitter</a></li>
                 <li><a class="footer-link" href="#">Instagram</a></li>
-                <li><a class="footer-link" href="#">Tumblr</a></li>
+                <li><a class="footer-link" href="#">Facebook</a></li>
                 <li><a class="footer-link" href="#">Pinterest</a></li>
               </ul>
             </div>
