--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,7 +35,7 @@
                 <p class="small text-muted mb-0">&copy; 2025 All rights reserved.</p>
               </div>
               <div class="col-lg-6 text-lg-right">
-                <p class="small text-muted mb-0">Website by <a class="text-white reset-anchor" href="" target="_blank">Vijay Thapa</a></p>
+                <p class="small text-muted mb-0"> <a class="text-white reset-anchor" href="" target="_blank"></a></p>
               </div>
             </div>
           </div>
